executable('skkfep', [
  'main.cpp',
  'app.cpp',
  'fep.cpp',
  'keybind.cpp',
  'kkconv.cpp',
  'skklib.cpp',
  'keymap.cpp',
  'etc.cpp',
  'romkan.cpp',
  ],
  install: true,
  dependencies: [termpty_dep],
  c_args: [
    '-DUSE_LOCALE',
    '-Wno-implicit-function-declaration', 
    '-Wno-implicit-int',
    '-Wno-return-type',

    '-Wno-missing-braces',
    '-Wno-comment',
    '-Wno-builtin-declaration-mismatch',
    '-Wno-unused-variable',
    '-Wno-unused-but-set-variable',
    '-Wno-format',
    '-Wno-switch',
    '-Wno-char-subscripts',
    '-Wno-unused-function',
  ],
)
